PB-75: adaptive: prevent extra-stretching user-card

--- a/src/app/employees/employee-card/employee-card.component.scss
+++ b/src/app/employees/employee-card/employee-card.component.scss
@@ -1,4 +1,5 @@
 .user-card {
+  min-width: 20rem;
   border-radius: var(--secondary-border-radius);
   box-shadow: var(--primary-box-shadow);
 }
